# make-ugc

./: .gitignore  pyproject.toml  requirements.txt
src/make_ugc/: __init__.py  __main__.py
src/make_ugc/models/: __init__.py  config.py
src/make_ugc/presets/: __init__.py  pov_reaction.py  registry.py
src/make_ugc/services/: __init__.py  generator.py
src/make_ugc/utils/: __init__.py  env.py
